--- a/typewriter.html
+++ b/typewriter.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <button>click here</button>
     <h1 id="typewriter">This text is written one character at a time</h1>
 
     <div id="sounds">
