--- a/typewriter.html
+++ b/typewriter.html
@@ -14,6 +14,16 @@
       #typewriter {
         font-family: "Special Elite", cursive;
       }
+      .hide {
+        display: none;
+      }
+      button {
+        background-color: black;
+        color: white;
+        border: black;
+        padding: 10px;
+        font-family: "Special Elite", cursive;
+      }
     </style>
   </head>
   <body>
